Agentforce/force-app/main/default/objects/Contract_Terms__c/Contract_Terms__c.object-meta.xml
<CustomObject>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Contract Terms</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Contract Terms No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>