Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Deed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>