Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Annual_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Annual_Price_Adjustment__c</fullName>
    <description>Whether we have an annual price adjustment right instead of or in addition to the pass throughs</description>
    <inlineHelpText>Whether we have an annual price adjustment right instead of or in addition to the pass throughs above</inlineHelpText>
    <label>Annual Price Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Completion_Status</valueSetName>
    </valueSet>
</CustomField>