Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Asset_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Asset_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Asset Reconciliation</label>
    <type>Checkbox</type>
</CustomField>