Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Client_Convenience__c.field-meta.xml
<CustomField>
    <fullName>Client_Convenience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://dev.azure.com/OCS-SalesforceGreenField/Salesforce%20Greenfield/_workitems/edit/783</description>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>