Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Client_Force_Majure__c.field-meta.xml
<CustomField>
    <fullName>Client_Force_Majure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>