Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Comments_Client__c.field-meta.xml
<CustomField>
    <fullName>Comments_Client__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>