Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Comments_Indemnities_Scope__c.field-meta.xml
<CustomField>
    <fullName>Comments_Indemnities_Scope__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>