Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Terms</relationshipLabel>
    <relationshipName>Contract_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>