Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Contract_Terms_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms_CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Contract Terms CaseSafeID</label>
    <type>Text</type>
</CustomField>