Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Cost_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Cost of Change</label>
    <type>Checkbox</type>
</CustomField>