Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Insurances_Limited_To_Public__c.field-meta.xml
<CustomField>
    <fullName>Insurances_Limited_To_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Insurances Limited To Public</label>
    <type>Checkbox</type>
</CustomField>