Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Legacy_OCS_Contract_Term_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Contract_Term_Id__c</fullName>
    <description>legacy OCS CT ID</description>
    <externalId>true</externalId>
    <label>Legacy_OCS_Contract_Term_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>