Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Liability_Cap__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap__c</fullName>
    <description>AD-783 The ability to add any special, notable terms or LOIs to a Contract record. The ability to highlight key contract agreements such as annual price increase dates.</description>
    <label>Liability Cap Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;2x Contract Value</fullName>
            </value>
            <value>
                <fullName>&gt;2x Contract Value</fullName>
            </value>
            <value>
                <fullName>Uncapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>