Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/OCS_Convenience__c.field-meta.xml
<CustomField>
    <fullName>OCS_Convenience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OCS</label>
    <type>Checkbox</type>
</CustomField>