Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Parent_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guarantee__c</fullName>
    <description>Whether the contract requires a PCG</description>
    <inlineHelpText>Whether the contract requires a PCG</inlineHelpText>
    <label>Parent Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>