Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;30 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>61+ Days</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>120</fullName>
                <isActive>false</isActive>
                <label>120</label>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>30 days or less</fullName>
                <isActive>false</isActive>
                <label>30 days or less</label>
            </value>
            <value>
                <fullName>31 – 60 days</fullName>
                <isActive>false</isActive>
                <label>31 – 60 days</label>
            </value>
            <value>
                <fullName>45</fullName>
                <isActive>false</isActive>
                <label>45</label>
            </value>
            <value>
                <fullName>60</fullName>
                <isActive>false</isActive>
                <label>60</label>
            </value>
            <value>
                <fullName>75</fullName>
                <isActive>false</isActive>
                <label>75</label>
            </value>
            <value>
                <fullName>90</fullName>
                <isActive>false</isActive>
                <label>90</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>