Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Real_Living_Wage__c.field-meta.xml
<CustomField>
    <fullName>Real_Living_Wage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real Living Wage/London Living Wage</label>
    <type>Checkbox</type>
</CustomField>