Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Redundancy__c.field-meta.xml
<CustomField>
    <fullName>Redundancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redundancy</label>
    <type>Checkbox</type>
</CustomField>