Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Residual_Investments__c.field-meta.xml
<CustomField>
    <fullName>Residual_Investments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residual Investments</label>
    <type>Checkbox</type>
</CustomField>