Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/RPI_CPI__c.field-meta.xml
<CustomField>
    <fullName>RPI_CPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPI/CPI</label>
    <type>Checkbox</type>
</CustomField>