Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Scope_of_Indemnities_Limited__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Indemnities_Limited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope of Indemnities limited</label>
    <type>Checkbox</type>
</CustomField>