Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/TUPE_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>TUPE_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TUPE Reconciliation</label>
    <type>Checkbox</type>
</CustomField>