Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/UK_Payment_Terms_Classification_Formula__c.field-meta.xml
<CustomField>
    <fullName>UK_Payment_Terms_Classification_Formula__c</fullName>
    <formula>Case (Payment_Terms__c ,  
&quot;&lt;30 Days&quot;,&quot;30 days or less&quot;,  
&quot;30 days&quot;,&quot;30 days or less&quot;,  
&quot;45 days&quot;,&quot;31 – 60 days&quot;,
&quot;60 Days&quot;, &quot;31 – 60 days&quot;,
&quot;61+ days&quot;,&quot;60+ days&quot;,
						&quot;&quot;)</formula>
    <label>UK Payment Terms Classification</label>
    <type>Text</type>
</CustomField>