Agentforce/force-app/main/default/objects/Contract_Terms__c/fields/Yes_Liability__c.field-meta.xml
<CustomField>
    <fullName>Yes_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes</label>
    <type>Checkbox</type>
</CustomField>